tests/programs/eval.stderr
SyntaxError: missing or invalid tokens for s_step
DivideByZeroError: attempted to divide by zero
at <stl:operators>:55:26
at <stl:operators>:53:11
at <stl:operators>:50:19
at <file>:1:4
at <file>:1:2
NameError: No variable named `aaaaa` found!
at programs/eval.re:8:23
at programs/eval.re:8:22
